--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,14 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:11.0.2'
     compile 'com.google.android.gms:play-services-maps:11.0.2'
     compile 'com.google.android.gms:play-services-location:11.0.2'
+    //pa install gud ko ani palihug haha di ko ka install atal mo lag
+    compile 'com.android.support:recyclerview-v7:26.0.0-beta2'
+
+
+    //bottom bar lib
+    compile 'com.roughike:bottom-bar:2.0.2'
+
+    //JSON serialization lib
+    compile 'com.google.code.gson:gson:2.8.1'
     testCompile 'junit:junit:4.12'
 }
