--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,11 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-places:11.0.2'
-    compile 'com.google.android.gms:play-services-maps:11.0.2'
-    compile 'com.google.android.gms:play-services-location:11.0.2'
+    compile 'com.google.android.gms:play-services-places:11.0.4'
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
+    compile 'com.google.android.gms:play-services-location:11.0.4'
     //pa install gud ko ani palihug haha di ko ka install atal mo lag
-    compile 'com.android.support:recyclerview-v7:26.0.0-beta2'
-
+    compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
 
     //bottom bar lib
     compile 'com.roughike:bottom-bar:2.0.2'
