--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+    //bottom bar lib
+
+    //JSON serialization lib
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -32,11 +37,13 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:11.0.4'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile 'com.android.support:design:26.+'
-
-    //bottom bar lib
     compile 'com.roughike:bottom-bar:2.0.2'
-
-    //JSON serialization lib
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.google.firebase:firebase-auth:11.0.4'
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
