--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,19 +24,22 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    //pa install gud ko ani palihug haha di ko ka install atal mo lag
+
+    //animations lib
+
+    //bottom bar lib
+
+    //JSON serialization lib
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:support-v4:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-places:11.0.4'
     compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.google.android.gms:play-services-location:11.0.4'
-    //pa install gud ko ani palihug haha di ko ka install atal mo lag
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-
-    //bottom bar lib
+    compile 'com.wang.avi:library:2.1.3'
     compile 'com.roughike:bottom-bar:2.0.2'
-
-    //JSON serialization lib
     compile 'com.google.code.gson:gson:2.8.1'
     testCompile 'junit:junit:4.12'
 }
