--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/undivided_logo"
+        android:icon="@mipmap/undivided_logo_notext"
         android:label="@string/app_name"
         android:launchMode="singleTask"
         android:roundIcon="@mipmap/ic_launcher_round"
