--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,12 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        maven {
+            url "https://maven.google.com"
+        }
+        maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
         mavenLocal()
+        mavenCentral()
     }
 }
 
