--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,12 +18,11 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
-        maven {
-            url "https://maven.google.com"
-        }
+        maven { url "https://maven.google.com" }
         maven { url "http://oss.sonatype.org/content/repositories/snapshots/" }
         mavenLocal()
         mavenCentral()
+        google()
     }
 }
 
