--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,11 @@ dependencies {
     compile 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.1.0'
     compile 'jp.wasabeef:blurry:2.1.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'android.arch.lifecycle:extensions:1.0.0-alpha-9-1'
+//    compile 'android.arch.persistence.room:runtime:1.0.0'
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha9-1"
+//    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 }
 apply plugin: 'com.google.gms.google-services'
 
