Navigtaion changed to Google Maps

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,7 @@
             android:name=".NavigationMode.Navigation"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Group.ContactPicker"
+            android:name=".Group.GroupContactPicker"
             android:label="@string/contactpicker_title"
             android:parentActivityName=".AutoReply.CustomizeMessage"
             android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
@@ -133,14 +133,9 @@
         <activity android:name=".Group.AddGroup" />
         <activity android:name=".DisableAppSwitch" />
         <activity android:name=".Profile" />
-<<<<<<< HEAD
         <activity android:name=".GroupSender.Activity.MainActivity" />
         <activity android:name=".GroupSender.GroupSenderActivity"></activity>
-=======
-
-        <activity android:name=".NavigationMode.NavigationMode" />
         <activity android:name=".SafeMode"></activity>
->>>>>>> 60b324aaaea404fbf4fcb6f33c4a093dbb0437d6
     </application>
 
 </manifest>
