--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,29 +26,28 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    //MapBox
-    compile('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.7.1-SNAPSHOT') {
-        transitive = true
-    }
-
     //ButterKnife
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    //Google
+    compile 'com.google.android.gms:play-services-places:11.6.2'
+    compile 'com.google.android.gms:play-services-maps:11.6.2'
+    compile 'com.google.android.gms:play-services-location:11.6.2'
+    compile 'com.google.android.gms:play-services-auth:11.6.2'
+
+    //Firebase
+    compile 'com.google.firebase:firebase-auth:11.6.2'
+    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
+
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-places:11.6.0'
-    compile 'com.google.android.gms:play-services-maps:11.6.0'
-    compile 'com.google.android.gms:play-services-location:11.6.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
     compile 'com.wang.avi:library:2.1.3'
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.google.code.gson:gson:2.8.1'
-    compile 'com.google.firebase:firebase-auth:11.6.0'
-    compile 'com.google.android.gms:play-services-auth:11.6.0'
-    compile 'com.firebaseui:firebase-ui-auth:1.2.0'
     compile 'jp.wasabeef:blurry:2.1.1'
     testCompile 'junit:junit:4.12'
 
